--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "node-sass": "^9.0.0",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
