--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/amatic-sc": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "node-sass": "^9.0.0",
     "punycode": "^2.3.1",
